# Monocle

./: .gitignore  README.md  build-codemirror.js  package-lock.json  package.json
.github/workflows/: release.yml
src/: editor.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
